fix(cli): accept duplicate -Xmx/-classpath (last wins) so CratonVM works as a Surefire -Djvm fork
Maven Surefire + the WildFly testsuite fork the test JVM with `-Xmx512m` passed
twice (surefire memory args + jvm.args). The real `java` launcher accepts repeated
`-Xmx` (last wins), but CratonVM normalized each to clap's `--Xmx` and clap aborted
with "the argument '--Xmx <SIZE>' cannot be used multiple times" (exit 2) — which
Surefire reports as "forked VM terminated without properly saying goodbye". Add
`overrides_with` (self) to `--Xmx` and `--classpath` so duplicates are last-wins,
matching `java`. The fork now parses CratonVM's full Surefire arg set and starts.

Also documents two WildFly-live-container findings:
- bug-03 (Gap C): java.util.regex is ~50-600x slower than HotSpot, so the cratonvm
  Arquillian client can't build the ShrinkWrap deployment archive in reasonable
  time (root-caused via --stack-dump-on-timeout + RegexBench; perf, open).
- bug-04 (Gap A): the dup-Xmx fix above; a deeper Surefire ForkedBooter init exit-1
  remains, and Gap C blocks the client path regardless.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>